--- a/templates/selfsigned_cert.template.yaml
+++ b/templates/selfsigned_cert.template.yaml
@@ -3,6 +3,30 @@ Description: "Deploys a lambda functon that generates Self-Signed SSL Certificat
 ##############################################################################
 #                               Resources                                    #
 ##############################################################################
+Parameters:
+  QSS3BucketName:
+    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
+    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
+      letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
+      (-).
+    Default: aws-quickstart
+    Description: S3 bucket name for the Quick Start assets. Quick Start bucket name
+      can include numbers, lowercase letters, uppercase letters, and hyphens (-).
+      It cannot start or end with a hyphen (-).
+    Type: String
+  QSS3BucketRegion:
+    Default: 'us-east-1'
+    Description: 'The AWS Region where the Quick Start S3 bucket (QSS3BucketName) is hosted. When using your own bucket, you must specify this value.'
+    Type: String
+  QSS3KeyPrefix:
+    AllowedPattern: ^[0-9a-zA-Z-/]*$
+    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
+      uppercase letters, hyphens (-), and forward slash (/).
+    Default: quickstart-eks-rancher/
+    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
+      can include numbers, lowercase letters, uppercase letters, hyphens (-), and
+      forward slash (/).
+    Type: String
 Resources:
   certGenLambdaFunction:
     Type: 'AWS::Lambda::Function'
@@ -16,8 +40,8 @@ Resources:
       Runtime: python3.7
       Timeout: 900
       Code:
-        S3Bucket: rancher-qs-eks-lambdazip-ca-central
-        S3Key: function.zip
+        S3Bucket: !Ref QSS3BucketName
+        S3Key: !Sub '${QSS3KeyPrefix}functions/packages/certGen/lambda.zip'
 
   certGenLambdaIamRole:
     Type: 'AWS::IAM::Role'
