Adding IAM role as a parameter and adding additional permissions

--- a/templates/rancher.template.yaml
+++ b/templates/rancher.template.yaml
@@ -23,12 +23,24 @@ Metadata:
           - PublicSubnet1CIDR
           - PublicSubnet2CIDR
       - Label:
+          default: EKS Configuration
+        Parameters:
+          - EKSClusterName
+          - IAMRole
+          - SecurityGroup
+      - Label:
+          default: EC2 Configuration
+        Parameters:
+          - KeyPairName
+      - Label:
           default: AWS Quick Start Configuration
         Parameters:
           - QSS3BucketName
           - QSS3KeyPrefix
           - QSS3BucketRegion
     ParameterLabels:
+      KeyPairName:
+        default: EC2 key pair name
       PrivateSubnet1CIDR:
         default: Private Subnet 1 CIDR
       PrivateSubnet1ID:
@@ -53,8 +65,16 @@ Metadata:
         default: VPC ID
       EKSClusterName:
         default: EKS Cluster Name
+      IAMRole:
+        default: IAM Role
+      SecurityGroup:
+        default: EC2 Security Group
 
 Parameters:
+  KeyPairName:
+    Description: Public/private key pair, which allows you to securely connect to your instance
+      after it launches.
+    Type: AWS::EC2::KeyPair::KeyName
   PrivateSubnet1CIDR:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
@@ -121,6 +141,12 @@ Parameters:
     AllowedPattern: ^EKS-[0-9a-zA-Z]{8}$
     Description: EKS Cluster Name
     Type: String
+  IAMRole:
+    Description: IAM role for the installer to use. The role should be a member of the system:masters group in the EKS config map
+    Type: String
+  SecurityGroup:
+    Description: Security group for the installer to use
+    Type: AWS::EC2::SecurityGroup::Id
 
 Rules:
   SubnetsInVPC:
@@ -169,6 +195,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - iam:CreateRole
+                  - iam:CreatePolicy
                   - iam:PutRolePolicy
                   - iam:getRolePolicy
                   - iam:DetachRolePolicy
@@ -253,8 +280,17 @@ Resources:
           AWSRegion:
             description: "Region"
             type: "String"
+          KeyPairName:
+            description: "Key pair to use for the ephemeral instance"
+            type: "String"
           EKSClusterName:
             description: "EKS Cluster Name"
+            type: "String"
+          IAMRole:
+            description: "IAM role for the installer to use"
+            type: "String"
+          SecurityGroup:
+            description: "Security group for the installer to use"
             type: "String"
         mainSteps:
         - name:  CreateStack
@@ -268,7 +304,7 @@ Resources:
               Parameters:
                 LINUXBASE:
                   Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
-                  Default: '/ami-amazon-linux/latest'
+                  Default: '/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2'
                 QSS3BucketName:
                   Type: "String"
                   Default: "{{QSS3BucketName}}"
@@ -285,93 +321,80 @@ Resources:
                   Description: "Subnet to deploy the EC2 instnace"
                   Default: "{{PrivateSubnet1ID}}"
                   Type: "String"
+                KeyPairName:
+                  Description: "Key pair name for the ephemeral instance"
+                  Default: "{{KeyPairName}}"
+                  Type: "String"
                 EKSClusterName:
                   Description: EKS Cluster Name
                   Type: "String"
                   Default: "{{EKSClusterName}}"
+                IAMRole:
+                  Description: IAM role for the installer to use
+                  Type: "String"
+                  Default: "{{IAMRole}}"
+                SecurityGroup:
+                  Description: Security group for the installer to use
+                  Type: "AWS::EC2::SecurityGroup::Id"
+                  Default: "{{SecurityGroup}}"
               Resources:
-                InstallerRole: 
-                  Type : AWS::IAM::Role
+                RancherManagedS3Policy:
+                  Type: 'AWS::IAM::ManagedPolicy'
                   Properties:
-                    Policies:
-                      - PolicyDocument:
-                          Version: '2012-10-17'
-                          Statement:
-                            - Action:
-                                - s3:GetObject
-                                - s3:ListBucket
-                              Resource: "*"
-                              Effect: Allow
-                        PolicyName: s3-instance-bucket-policy
-                      - PolicyDocument:
-                          Version: '2012-10-17'
-                          Statement:
-                            - Action:
-                                - route53:CreateHostedZone
-                                - route53:DisassociateVPCFromHostedZone
-                                - route53:GetHostedZone
-                                - route53:ListHostedZones
-                                - route53:ChangeResourceRecordSets
-                                - route53:CreateQueryLoggingConfig
-                                - route53:CreateVPCAssociationAuthorization
-                                - route53:UpdateHealthCheck
-                                - route53:DeleteHealthCheck
-                                - route53:ListHostedZonesByName
-                                - route53:DeleteVPCAssociationAuthorization
-                                - route53:CreateHealthCheck
-                                - route53:ListResourceRecordSets
-                                - route53:DeleteHostedZone
-                                - route53:AssociateVPCWithHostedZone
-                                - route53:UpdateHostedZoneComment
-                                - route53:DeleteQueryLoggingConfig
-                                - elasticloadbalancing:DescribeLoadBalancers
-                              Resource: "*"
-                              Effect: Allow
-                        PolicyName: r53-permission
-                      - PolicyDocument:
-                          Version: '2012-10-17'
-                          Statement:
-                            - Action:
-                                - eks:DescribeCluster
-                                - eks:DescribeUpdate
-                                - eks:ListUpdates
-                                - eks:UpdateClusterVersion
-                              Resource:
-                                - !Join
-                                    - ''
-                                    - - 'arn:aws:eks:'
-                                      - !Sub ${AWS::Region}
-                                      - ':'
-                                      - !Sub ${AWS::AccountId}
-                                      - ':cluster/'
-                                      - !Ref EKSClusterName
-                              Effect: Allow
-                        PolicyName: eks-access
-                    Path: /
-                    ManagedPolicyArns:
-                      - !Sub 'arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore'
-                      - !Sub 'arn:${AWS::Partition}:iam::aws:policy/CloudWatchAgentServerPolicy'
-                    AssumeRolePolicyDocument:
-                      Version: "2012-10-17"
+                    PolicyDocument:
+                      Version: '2012-10-17'
                       Statement:
-                      - Effect: "Allow"
-                        Principal:
-                          Service:
-                          - "ec2.amazonaws.com"
-                          - "ssm.amazonaws.com"
-                        Action: "sts:AssumeRole"
+                        - Action:
+                            - s3:GetObject
+                            - s3:ListBucket
+                          Resource: "*"
+                          Effect: Allow
+                    Roles:
+                    - !Ref IAMRole
+                RancherManagedR53Policy:
+                  Type: 'AWS::IAM::ManagedPolicy'
+                  Properties:
+                    PolicyDocument:
+                      Version: '2012-10-17'
+                      Statement:
+                        - Action:
+                            - route53:CreateHostedZone
+                            - route53:DisassociateVPCFromHostedZone
+                            - route53:GetHostedZone
+                            - route53:ListHostedZones
+                            - route53:ChangeResourceRecordSets
+                            - route53:CreateQueryLoggingConfig
+                            - route53:CreateVPCAssociationAuthorization
+                            - route53:UpdateHealthCheck
+                            - route53:DeleteHealthCheck
+                            - route53:ListHostedZonesByName
+                            - route53:DeleteVPCAssociationAuthorization
+                            - route53:CreateHealthCheck
+                            - route53:ListResourceRecordSets
+                            - route53:DeleteHostedZone
+                            - route53:AssociateVPCWithHostedZone
+                            - route53:UpdateHostedZoneComment
+                            - route53:DeleteQueryLoggingConfig
+                            - elasticloadbalancing:DescribeLoadBalancers
+                          Resource: "*"
+                          Effect: Allow
+                    Roles:
+                    - !Ref IAMRole
                 IamInstanceProfile:
                   Type: "AWS::IAM::InstanceProfile"
                   Properties:
                     Roles:
-                    - !Ref InstallerRole
+                    - !Ref IAMRole
                 EC2Instance:
                   Type: "AWS::EC2::Instance"
                   Properties:
                     ImageId: !Ref LINUXBASE
                     InstanceType: "t2.micro"
                     IamInstanceProfile: !Ref IamInstanceProfile
+                    KeyName: !Ref KeyPairName
                     SubnetId: !Ref Subnet
+                    SecurityGroupIds:
+                      - !Ref 'SecurityGroup'
                     Tags:
                     - Key: "Name"
                       Value: "TempRancherInstance"
@@ -424,7 +447,7 @@ Resources:
         # If all steps complete successfully signals CFN of Success
         - name: "signalsuccess"
           action: "aws:executeAwsApi"
-          nextStep: "deleteStack"
+#          nextStep: "deleteStack"
           inputs:
             Service: cloudformation
             Api: SignalResource
@@ -435,13 +458,13 @@ Resources:
         # If CFN Signl Not Needed this sleep ends work flow
         - name: "sleepend"
           action: "aws:sleep"
-          nextStep: "deleteStack"
+#          nextStep: "deleteStack"
           inputs:
             Duration: PT1S
         # If any steps fails signals CFN of Failure
         - name: "signalfailure"
           action: "aws:executeAwsApi"
-          nextStep: "deleteStack"
+#          nextStep: "deleteStack"
           inputs:
             Service: cloudformation
             Api: SignalResource
@@ -449,12 +472,12 @@ Resources:
             StackName: "{{StackName}}"
             Status: FAILURE
             UniqueId: "{{getInstanceId.InstanceId}}"
-        - name: deleteStack
-          action: aws:deleteStack
-          isEnd: true
+#        - name: deleteStack
+#          action: aws:deleteStack
+#          isEnd: true
 #          onFailure: Continue
-          inputs:
-            StackName: "InstallRancher"
+#          inputs:
+#            StackName: "InstallRancher"
   LambdaSSMExecute:
     DependsOn: LambdaSSMRole
     Type: AWS::Lambda::Function
@@ -486,14 +509,14 @@ Resources:
                   qs_bucket = event['ResourceProperties']['QSS3BucketName']
                   qs_region = event['ResourceProperties']['QSS3BucketRegion']
                   qs_bucket_prefix = event['ResourceProperties']['QSS3KeyPrefix']
-                  #security_group = event['ResourceProperties']['DomainMemberSG']
                   subnet_id = event['ResourceProperties']['PrivateSubnet1ID']
-                  #key_name = event['ResourceProperties']['KeyPairName']
+                  key_name = event['ResourceProperties']['KeyPairName']
                   vpc_cidr = event['ResourceProperties']['VPCCIDR']
-                  #directory_id = event['ResourceProperties']['DirectoryID']
                   aws_region = event['ResourceProperties']['AWSRegion']
                   #url_suffix = event['ResourceProperties']['URLSuffix']
                   eks_cluster = event['ResourceProperties']['EKSClusterName']
+                  iam_role = event['ResourceProperties']['IAMRole']
+                  security_group = event['ResourceProperties']['SecurityGroup']
 
                   if qs_bucket == "aws-quickstart":
                     qs_bucket = "aws-quickstart-" + qs_region
@@ -516,26 +539,26 @@ Resources:
                           'QSS3KeyPrefix': [
                               qs_bucket_prefix
                           ],
-                          #'DomainMemberSG': [
-                          #    security_group
-                          #],
                           'PrivateSubnet1ID': [
                               subnet_id
                           ],
-                          #'KeyPairName': [
-                          #    key_name
-                          #],
+                          'KeyPairName': [
+                              key_name
+                          ],
                           'VPCCIDR': [
                               vpc_cidr
                           ],
-                          #'DirectoryID': [
-                          #    directory_id
-                          #],
                           'AWSRegion': [
                               aws_region
                           ],
                           'EKSClusterName': [
                               eks_cluster
+                          ],
+                          'IAMRole': [
+                              iam_role
+                          ],
+                          'SecurityGroup': [
+                              security_group
                           ]
                           #'URLSuffix': [
                           #    url_suffix
@@ -572,9 +595,12 @@ Resources:
       QSS3KeyPrefix: !Ref QSS3KeyPrefix
       AutomationAssumeRole: !GetAtt SSMAutomationRole.Arn
       PrivateSubnet1ID: !Ref PrivateSubnet1ID
+      KeyPairName: !Ref KeyPairName
       VPCCIDR: !Ref VPCCIDR
       AWSRegion: !Ref 'AWS::Region'
       EKSClusterName: !Ref EKSClusterName
+      IAMRole: !Ref 'IAMRole'
+      SecurityGroup: !Ref 'SecurityGroup'
       #URLSuffix: !Ref 'AWS::URLSuffix'
   SSMWaitHandle: 
     Type: AWS::CloudFormation::WaitConditionHandle
@@ -592,70 +618,3 @@ Resources:
         Ref: "SSMWaitHandle"
       Timeout: "3600"
       Count: 1
-#  AWSQuickstartADRole:
-#    Type: AWS::IAM::Role
-#    Properties:
-#      Policies:
-#        - PolicyDocument:
-#            Version: '2012-10-17'
-#            Statement:
-#              - Action:
-#                  - s3:GetObject
-#                  - s3:ListBucket
-#                Resource: "*"
-#                Effect: Allow
-#          PolicyName: aws-quick-start-s3-policy
-#        - PolicyDocument:
-#            Version: '2012-10-17'
-#            Statement:
-#              - Effect: Allow
-#                Action:
-#                  - cloudformation:SignalResource
-#                Resource: !Sub 'arn:${AWS::Partition}:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}/*'
-#              - Effect: Allow
-#                Action:
-#                  - ec2:DescribeInstances
-#                  - ec2:DescribeInstanceStatus
-#                  - ssm:*
-#                Resource: '*'
-#          PolicyName: AD-SSM-AutomationExecution
-#      Path: /
-#      AssumeRolePolicyDocument:
-#        Statement:
-#          - Action:
-#              - sts:AssumeRole
-#            Principal:
-#              Service:
-#                - ec2.amazonaws.com
-#                - ssm.amazonaws.com
-#            Effect: Allow
-#        Version: '2012-10-17'
-
-#Outputs:
-#  ADServer1PrivateIP:
-#    Value: !Select
-#      - '0'
-#      - !GetAtt 'MicrosoftAD.DnsIpAddresses'
-#    Description: AD Server 1 Private IP Address (this may vary based on Directory
-#      Service order of IP addresses)
-#  ADServer2PrivateIP:
-#    Value: !Select
-#      - '1'
-#      - !GetAtt 'MicrosoftAD.DnsIpAddresses'
-#    Description: AD Server 2 Private IP Address (this may vary based on Directory
-#      Service order of IP addresses)
-#  DirectoryID:
-#    Value: !Ref 'MicrosoftAD'
-#    Description: Directory Services ID
-#  DomainAdmin:
-#    Value: !Join
-#      - ''
-#      - - !Ref 'DomainNetBIOSName'
-#        - \admin
-#    Description: Domain administrator account
-#  DomainMemberSGID:
-#    Value: !Ref 'DomainMemberSG'
-#    Description: Domain Member Security Group ID
-#  ADSecretsArn:
-#    Value: !Ref 'ADAdminSecrets'
-#    Description: Managed AD Admin Secrets
