--- a/templates/rancher.template.yaml
+++ b/templates/rancher.template.yaml
@@ -29,18 +29,12 @@ Metadata:
           - IAMRole
           - SecurityGroup
       - Label:
-          default: EC2 Configuration
-        Parameters:
-          - KeyPairName
-      - Label:
           default: AWS Quick Start Configuration
         Parameters:
           - QSS3BucketName
           - QSS3KeyPrefix
           - QSS3BucketRegion
     ParameterLabels:
-      KeyPairName:
-        default: EC2 key pair name
       PrivateSubnet1CIDR:
         default: Private Subnet 1 CIDR
       PrivateSubnet1ID:
@@ -71,10 +65,6 @@ Metadata:
         default: EC2 Security Group
 
 Parameters:
-  KeyPairName:
-    Description: Public/private key pair, which allows you to securely connect to your instance
-      after it launches.
-    Type: AWS::EC2::KeyPair::KeyName
   PrivateSubnet1CIDR:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
@@ -207,6 +197,7 @@ Resources:
                   - iam:AddRoleToInstanceProfile
                   - iam:DeleteInstanceProfile
                   - iam:PassRole
+                  - iam:GetPolicy
                 Resource: '*'
           PolicyName: aws-quick-start-create-role-policy
       Path: /
@@ -280,9 +271,6 @@ Resources:
           AWSRegion:
             description: "Region"
             type: "String"
-          KeyPairName:
-            description: "Key pair to use for the ephemeral instance"
-            type: "String"
           EKSClusterName:
             description: "EKS Cluster Name"
             type: "String"
@@ -320,10 +308,6 @@ Resources:
                 Subnet:
                   Description: "Subnet to deploy the EC2 instnace"
                   Default: "{{PrivateSubnet1ID}}"
-                  Type: "String"
-                KeyPairName:
-                  Description: "Key pair name for the ephemeral instance"
-                  Default: "{{KeyPairName}}"
                   Type: "String"
                 EKSClusterName:
                   Description: EKS Cluster Name
@@ -391,7 +375,6 @@ Resources:
                     ImageId: !Ref LINUXBASE
                     InstanceType: "t2.micro"
                     IamInstanceProfile: !Ref IamInstanceProfile
-                    KeyName: !Ref KeyPairName
                     SubnetId: !Ref Subnet
                     SecurityGroupIds:
                       - !Ref 'SecurityGroup'
@@ -429,9 +412,9 @@ Resources:
               CloudWatchLogGroupName: !Sub '/aws/Quick_Start/${AWS::StackName}'
             Parameters:
               commands:
-                #- wget https://eks-quickstart-lambdazips-us-east-1-740568573523.s3.amazonaws.com/rancher_install.sh
-                - wget  https://eks-quickstart-lambdazips-us-east-2-626002054944.s3.us-east-2.amazonaws.com/rancher_install.sh
-                - sh -x rancher_install.sh '{{global:REGION}}' '{{EKSClusterName}}'
+                #- wget -O /tmp/rancher_install.sh https://eks-quickstart-lambdazips-us-east-1-740568573523.s3.amazonaws.com/rancher_install.sh
+                - wget -O /tmp/rancher_install.sh https://eks-quickstart-lambdazips-us-east-2-660602721874.s3.us-east-2.amazonaws.com/rancher_install.sh
+                - /bin/su - ec2-user -c 'cd /tmp && sh -x rancher_install.sh {{global:REGION}} {{EKSClusterName}}'
         # Determines if CFN Needs to be Signaled or if Work flow should just end
         - name: CFNSignalEnd
           action: aws:branch
@@ -447,7 +430,7 @@ Resources:
         # If all steps complete successfully signals CFN of Success
         - name: "signalsuccess"
           action: "aws:executeAwsApi"
-#          nextStep: "deleteStack"
+          nextStep: "deleteStack"
           inputs:
             Service: cloudformation
             Api: SignalResource
@@ -458,13 +441,13 @@ Resources:
         # If CFN Signl Not Needed this sleep ends work flow
         - name: "sleepend"
           action: "aws:sleep"
-#          nextStep: "deleteStack"
+          nextStep: "deleteStack"
           inputs:
             Duration: PT1S
         # If any steps fails signals CFN of Failure
         - name: "signalfailure"
           action: "aws:executeAwsApi"
-#          nextStep: "deleteStack"
+          nextStep: "deleteStack"
           inputs:
             Service: cloudformation
             Api: SignalResource
@@ -472,12 +455,12 @@ Resources:
             StackName: "{{StackName}}"
             Status: FAILURE
             UniqueId: "{{getInstanceId.InstanceId}}"
-#        - name: deleteStack
-#          action: aws:deleteStack
-#          isEnd: true
-#          onFailure: Continue
-#          inputs:
-#            StackName: "InstallRancher"
+        - name: deleteStack
+          action: aws:deleteStack
+          isEnd: true
+          onFailure: Continue
+          inputs:
+            StackName: "InstallRancher"
   LambdaSSMExecute:
     DependsOn: LambdaSSMRole
     Type: AWS::Lambda::Function
@@ -510,7 +493,6 @@ Resources:
                   qs_region = event['ResourceProperties']['QSS3BucketRegion']
                   qs_bucket_prefix = event['ResourceProperties']['QSS3KeyPrefix']
                   subnet_id = event['ResourceProperties']['PrivateSubnet1ID']
-                  key_name = event['ResourceProperties']['KeyPairName']
                   vpc_cidr = event['ResourceProperties']['VPCCIDR']
                   aws_region = event['ResourceProperties']['AWSRegion']
                   #url_suffix = event['ResourceProperties']['URLSuffix']
@@ -541,9 +523,6 @@ Resources:
                           ],
                           'PrivateSubnet1ID': [
                               subnet_id
-                          ],
-                          'KeyPairName': [
-                              key_name
                           ],
                           'VPCCIDR': [
                               vpc_cidr
@@ -595,7 +574,6 @@ Resources:
       QSS3KeyPrefix: !Ref QSS3KeyPrefix
       AutomationAssumeRole: !GetAtt SSMAutomationRole.Arn
       PrivateSubnet1ID: !Ref PrivateSubnet1ID
-      KeyPairName: !Ref KeyPairName
       VPCCIDR: !Ref VPCCIDR
       AWSRegion: !Ref 'AWS::Region'
       EKSClusterName: !Ref EKSClusterName
