--- a/templates/rancher.template.yaml
+++ b/templates/rancher.template.yaml
@@ -326,6 +326,9 @@ Resources:
                             - ec2:DescribeSecurityGroups
                             - ec2:DescribeSubnets
                             - ec2:DescribeVpcs
+                            - ec2:DescribeAccountAttributes
+                            - ec2:DescribeAddresses
+                            - ec2:DescribeInternetGateways
                           Resource: "*"
                           Effect: Allow
                     Roles:
